--- a/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex
+++ b/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex
@@ -2,6 +2,6 @@
 \toprule
 C & Class Weighting Strategy & L1 Ratio & Multi-Class Strategy & Penalty & Solver \\
 \midrule
-0.010000 & None & 0.250000 & One vs Rest & Elastic Net & SAGA \\
+0.100000 & Balanced & 1.000000 & One vs Rest & Elastic Net & SAGA \\
 \bottomrule
 \end{tabular}
