--- a/Output/Modelling/Autogluon/Autogluon_Tabular_Only_SCF_Medium_Presets_feature_importance.tex
+++ b/Output/Modelling/Autogluon/Autogluon_Tabular_Only_SCF_Medium_Presets_feature_importance.tex
@@ -2,15 +2,15 @@
 \toprule
 Feature & Average Drop in Accuracy & Standard Deviation & P-Value \\
 \midrule
-rating_on_previous_fixed_quarter_date & 0.651779 & 0.020333 & 0.000000 \\
-days_since_rating & 0.003203 & 0.001489 & 0.004290 \\
-Ratio_D & 0.002135 & 0.000487 & 0.000304 \\
-taxPayables & 0.001957 & 0.000398 & 0.000194 \\
-Previous Rating & 0.001957 & 0.001160 & 0.009777 \\
-ticker & 0.001779 & 0.000890 & 0.005528 \\
-Altman_Z & 0.001423 & 0.000796 & 0.008065 \\
-Previous Rating Date & 0.001423 & 0.000796 & 0.008065 \\
-shortTermInvestments & 0.001423 & 0.000487 & 0.001419 \\
-otherCurrentLiabilities & 0.001423 & 0.000487 & 0.001419 \\
+rating_on_previous_fixed_quarter_date & 0.714769 & 0.013384 & 0.000000 \\
+weightedAverageShsOutDil & 0.003381 & 0.000975 & 0.000744 \\
+totalNonCurrentAssets & 0.002669 & 0.000000 & 0.500000 \\
+propertyPlantEquipmentNet & 0.001957 & 0.000744 & 0.002091 \\
+marketCap & 0.000890 & 0.000890 & 0.044505 \\
+totalLiabilities & 0.000178 & 0.000398 & 0.186950 \\
+changeInWorkingCapital & 0.000000 & 0.000000 & 0.500000 \\
+revenue & 0.000000 & 0.000000 & 0.500000 \\
+freeCashFlow & 0.000000 & 0.000000 & 0.500000 \\
+capitalExpenditure & 0.000000 & 0.000000 & 0.500000 \\
 \bottomrule
 \end{tabular}
