--- a/Code/Modelling/Autogluon/Tabular Only SCF with NLP Features - Medium Presets/Produce_LaTeX_Autogluon_Tabular_Only_SCF_Medium_Presets.ipynb
+++ b/Code/Modelling/Autogluon/Tabular Only SCF with NLP Features - Medium Presets/Produce_LaTeX_Autogluon_Tabular_Only_SCF_Medium_Presets.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "13          1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>WeightedEnsemble_L2</td>\n",
+       "      <td>WeightedEnsembleL2</td>\n",
        "      <td>0.952972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -477,24 +477,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                  Model  Test Accuracy\n",
-       "0               XGBoost       0.953860\n",
-       "1              LightGBM       0.952972\n",
-       "2            LightGBMXT       0.952972\n",
-       "3   WeightedEnsemble_L2       0.952972\n",
-       "4              CatBoost       0.952085\n",
-       "5        NeuralNetTorch       0.950311\n",
-       "6         LightGBMLarge       0.943212\n",
-       "7        ExtraTreesGini       0.939663\n",
-       "8        ExtraTreesEntr       0.938776\n",
-       "9      RandomForestGini       0.937888\n",
-       "10      NeuralNetFastAI       0.935226\n",
-       "11     RandomForestEntr       0.934339\n",
-       "12       KNeighborsDist       0.874002\n",
-       "13       KNeighborsUnif       0.848270"
+       "                 Model  Test Accuracy\n",
+       "0              XGBoost       0.953860\n",
+       "1             LightGBM       0.952972\n",
+       "2           LightGBMXT       0.952972\n",
+       "3   WeightedEnsembleL2       0.952972\n",
+       "4             CatBoost       0.952085\n",
+       "5       NeuralNetTorch       0.950311\n",
+       "6        LightGBMLarge       0.943212\n",
+       "7       ExtraTreesGini       0.939663\n",
+       "8       ExtraTreesEntr       0.938776\n",
+       "9     RandomForestGini       0.937888\n",
+       "10     NeuralNetFastAI       0.935226\n",
+       "11    RandomForestEntr       0.934339\n",
+       "12      KNeighborsDist       0.874002\n",
+       "13      KNeighborsUnif       0.848270"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,12 +504,13 @@
     "# Rename to 'Model' and 'Test Accuracy'\n",
     "lt_lb = leaderboard[['model', 'score_test']].rename(columns={'model': 'Model', 'score_test': 'Test Accuracy'})\n",
     "# Clean up column values, being sure to remove underscores\n",
+    "lt_lb['Model'] = lt_lb['Model'].str.replace('_', '')\n",
     "lt_lb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +706,7 @@
        "[121 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +849,7 @@
        "9            0.000000  5.000000e-01  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
