--- a/Output/Modelling/Autogluon/Autogluon_Tabular_Only_SCF_Medium_Presets_leaderboard.tex
+++ b/Output/Modelling/Autogluon/Autogluon_Tabular_Only_SCF_Medium_Presets_leaderboard.tex
@@ -5,7 +5,7 @@ Model & Test Accuracy \\
 XGBoost & 0.953860 \\
 LightGBM & 0.952972 \\
 LightGBMXT & 0.952972 \\
-WeightedEnsemble_L2 & 0.952972 \\
+WeightedEnsembleL2 & 0.952972 \\
 CatBoost & 0.952085 \\
 NeuralNetTorch & 0.950311 \\
 LightGBMLarge & 0.943212 \\
