--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "0                                                                        "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,14 @@
     "model_comparison_df.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/model_comparison_df.xlsx', index = False)\n",
     "\n",
     "# Export to Latex\n",
-    "model_comparison_df.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex', index = False)\n",
+    "#model_comparison_df.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex', index = False)\n",
+    "\n",
+    "# Export to LaTeX\n",
+    "# Center all columns\n",
+    "lt_string = model_comparison_df.to_latex(index=False, column_format='c' * len(model_comparison_df.columns), escape=False)\n",
+    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "with open('../../../../Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex', 'w') as f:\n",
+    "    f.write(latex_with_font_size)\n",
     "\n",
     "model_comparison_df"
    ]
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +324,14 @@
     "classification_report_data.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.xlsx', index=False)\n",
     "\n",
     "# Export to Latex\n",
-    "classification_report_data.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex', index=False)"
+    "#classification_report_data.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex', index=False)\n",
+    "\n",
+    "# Export to LaTeX\n",
+    "# Center all columns\n",
+    "lt_string = classification_report_data.to_latex(index=False, column_format='c' * 5, escape=False)\n",
+    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "with open('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex', 'w') as f:\n",
+    "    f.write(latex_with_font_size)"
    ]
   },
   {
@@ -329,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +382,14 @@
     "best_params.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.xlsx', index=False)\n",
     "\n",
     "# Export to Latex\n",
-    "best_params.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', index=False)"
+    "#best_params.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', index=False)\n",
+    "\n",
+    "# Export to LaTeX\n",
+    "# Center all columns\n",
+    "lt_string = best_params.to_latex(index=False, column_format='c' * len(best_params.columns), escape=False)\n",
+    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "with open('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', 'w') as f:\n",
+    "    f.write(latex_with_font_size)"
    ]
   },
   {
@@ -380,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +466,7 @@
        "0               0.96  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +486,14 @@
     "changes_table.to_excel('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.xlsx', index=False)\n",
     "\n",
     "# Output to Latex\n",
-    "changes_table.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', index=False)\n",
+    "#changes_table.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', index=False)\n",
+    "\n",
+    "# Export to LaTeX\n",
+    "# Center all columns\n",
+    "lt_string = changes_table.to_latex(index=False, column_format='c' * len(changes_table.columns), escape=False)\n",
+    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "with open('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', 'w') as f:\n",
+    "    f.write(latex_with_font_size)\n",
     "\n",
     "changes_table\n"
    ]
