--- a/Output/Modelling/Autogluon/Autogluon_Tabular_Only_SCF_Medium_Presets_leaderboard.tex
+++ b/Output/Modelling/Autogluon/Autogluon_Tabular_Only_SCF_Medium_Presets_leaderboard.tex
@@ -1,20 +1,23 @@
-\begin{tabular}{lr}
+\small
+\begin{tabular}{cc}
 \toprule
 Model & Test Accuracy \\
 \midrule
-XGBoost & 0.953860 \\
-LightGBM & 0.952972 \\
-LightGBMXT & 0.952972 \\
-WeightedEnsembleL2 & 0.952972 \\
-CatBoost & 0.952085 \\
-NeuralNetTorch & 0.950311 \\
-LightGBMLarge & 0.943212 \\
-ExtraTreesGini & 0.939663 \\
-ExtraTreesEntr & 0.938776 \\
-RandomForestGini & 0.937888 \\
-NeuralNetFastAI & 0.935226 \\
-RandomForestEntr & 0.934339 \\
-KNeighborsDist & 0.874002 \\
-KNeighborsUnif & 0.848270 \\
+XGBoost & 0.95 \\
+LightGBM & 0.95 \\
+LightGBMXT & 0.95 \\
+WeightedEnsembleL2 & 0.95 \\
+CatBoost & 0.95 \\
+NeuralNetTorch & 0.95 \\
+LightGBMLarge & 0.94 \\
+ExtraTreesGini & 0.94 \\
+ExtraTreesEntr & 0.94 \\
+RandomForestGini & 0.94 \\
+NeuralNetFastAI & 0.94 \\
+RandomForestEntr & 0.93 \\
+KNeighborsDist & 0.87 \\
+KNeighborsUnif & 0.85 \\
 \bottomrule
 \end{tabular}
+
+\normalsize
