--- a/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex
+++ b/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex
@@ -1,7 +1,10 @@
-\begin{tabular}{rlrlll}
+\small
+\begin{tabular}{cccccc}
 \toprule
 C & Class Weighting Strategy & L1 Ratio & Multi-Class Strategy & Penalty & Solver \\
 \midrule
 0.100000 & Balanced & 1.000000 & One vs Rest & Elastic Net & SAGA \\
 \bottomrule
 \end{tabular}
+
+\normalsize
