--- a/Output/Modelling/Logistic Regression/Tables/changes_table.tex
+++ b/Output/Modelling/Logistic Regression/Tables/changes_table.tex
@@ -1,7 +1,10 @@
-\begin{tabular}{rllrr}
+\small
+\begin{tabular}{ccccc}
 \toprule
 Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Majority Baseline \\
 \midrule
 0.960000 & 0.91 & 0.96 & 0.930000 & 0.960000 \\
 \bottomrule
 \end{tabular}
+
+\normalsize
