--- a/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
@@ -1,4 +1,5 @@
-\begin{tabular}{lrllll}
+\small
+\begin{tabular}{cccccc}
 \toprule
 Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Share Less Than 1 Rating From Actual \\
 \midrule
@@ -9,3 +10,5 @@ Rating Model 4 & 0.950000 & 0.95 & 0.95 & 0.950000 & 0.990000 \\
 Majority Baseline & 0.320000 &  &  &  &  \\
 \bottomrule
 \end{tabular}
+
+\normalsize
