--- a/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex
+++ b/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex
@@ -1,4 +1,5 @@
-\begin{tabular}{lllll}
+\small
+\begin{tabular}{ccccc}
 \toprule
 Rating & Precision & Recall & F1-Score & Support \\
 \midrule
@@ -14,3 +15,5 @@ C & 1.00 & 0.67 & 0.80 & 3 \\
 D & 1.00 & 1.00 & 1.00 & 2 \\
 \bottomrule
 \end{tabular}
+
+\normalsize
